--- a/plane_registration.ipynb
+++ b/plane_registration.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "2928"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,16 +34,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (15,18,19,24,25,26,27,28,30,34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(437916, 35)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +80,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +164,7 @@
        "1542   N18120      2005          2"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,14 +178,14 @@
     "newark_rego = newark_rego[keep_columns]\n",
     "newark_rego['Reg_year'] = newark_rego['Airworthiness Date'].apply(lambda row: int(row[0:4]))\n",
     "newark_rego['Reg_month'] = newark_rego['Airworthiness Date'].apply(lambda row: int(row[4:6]))\n",
-    "newark_rego['N-Number'] = newark_rego['N-Number'].apply(lambda row: 'N' + str(row))\n",
+    "newark_rego['N-Number'] = newark_rego['N-Number'].apply(lambda row: ('N' + str(row)).strip())\n",
     "newark_rego.drop('Airworthiness Date', axis=1, inplace=True)\n",
     "newark_rego.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
