--- a/plane_registration.ipynb
+++ b/plane_registration.ipynb
@@ -185,13 +185,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export as CSV\n",
-    "newark_rego.to_csv('newark_registration.csv')"
+    "newark_rego.to_csv('newark_plane_reg.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
