--- a/plane_registration.ipynb
+++ b/plane_registration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "2928"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,24 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3058: DtypeWarning: Columns (15,18,19,24,25,26,27,28,30,34) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  interactivity=interactivity, compiler=compiler, result=result)\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(437916, 35)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +72,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean up data\n",
+    "newark_rego = rego[rego['N-Number'].isin(aircraft_list)]\n",
+    "blank = '        '\n",
+    "newark_rego = newark_rego.drop(newark_rego[newark_rego['Airworthiness Date']==blank].index)\n",
+    "keep_columns = ['N-Number', 'Airworthiness Date']\n",
+    "newark_rego = newark_rego[keep_columns]\n",
+    "newark_rego['N-Number'] = newark_rego['N-Number'].apply(lambda row: ('N' + str(row)).strip())\n",
+    "newark_rego['Registered'] = pd.to_datetime(newark_rego['Airworthiness Date'])\n",
+    "newark_rego.drop('Airworthiness Date', axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -116,89 +125,66 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>N-Number</th>\n",
-       "      <th>Reg_year</th>\n",
-       "      <th>Reg_month</th>\n",
+       "      <th>Registered</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>48</td>\n",
        "      <td>N438WN</td>\n",
-       "      <td>2003</td>\n",
-       "      <td>7</td>\n",
+       "      <td>2003-07-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>400</td>\n",
        "      <td>N68061</td>\n",
-       "      <td>2002</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2002-03-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>646</td>\n",
        "      <td>N914UY</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>11</td>\n",
+       "      <td>2014-11-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>901</td>\n",
        "      <td>N446UA</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>7</td>\n",
+       "      <td>1998-07-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1542</td>\n",
        "      <td>N18120</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2005-02-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     N-Number  Reg_year  Reg_month\n",
-       "48     N438WN      2003          7\n",
-       "400    N68061      2002          3\n",
-       "646    N914UY      2014         11\n",
-       "901    N446UA      1998          7\n",
-       "1542   N18120      2005          2"
+       "     N-Number Registered\n",
+       "48     N438WN 2003-07-21\n",
+       "400    N68061 2002-03-08\n",
+       "646    N914UY 2014-11-07\n",
+       "901    N446UA 1998-07-02\n",
+       "1542   N18120 2005-02-25"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Clean up data\n",
-    "newark_rego = rego[rego['N-Number'].isin(aircraft_list)]\n",
-    "blank = '        '\n",
-    "newark_rego = newark_rego.drop(newark_rego[newark_rego['Airworthiness Date']==blank].index)\n",
-    "keep_columns = ['N-Number', 'Airworthiness Date']\n",
-    "newark_rego = newark_rego[keep_columns]\n",
-    "newark_rego['Reg_year'] = newark_rego['Airworthiness Date'].apply(lambda row: int(row[0:4]))\n",
-    "newark_rego['Reg_month'] = newark_rego['Airworthiness Date'].apply(lambda row: int(row[4:6]))\n",
-    "newark_rego['N-Number'] = newark_rego['N-Number'].apply(lambda row: ('N' + str(row)).strip())\n",
-    "newark_rego.drop('Airworthiness Date', axis=1, inplace=True)\n",
     "newark_rego.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export as CSV\n",
     "newark_rego.to_csv('newark_plane_reg.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
